src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>DealRegq10__c</fullName>
        <label>Current Storage Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dell EMC</fullName>
                </value>
                <value>
                    <fullName>Nutanix</fullName>
                </value>
                <value>
                    <fullName>Pure Storage</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Lenovo</fullName>
                </value>
                <value>
                    <fullName>NetApp</fullName>
                </value>
                <value>
                    <fullName>HDS</fullName>
                </value>
                <value>
                    <fullName>Tintri</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DealRegq11__c</fullName>
        <description>Question 11 - Deal reg</description>
        <label>Current Hypervisor (P)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VMware</fullName>
                </value>
                <value>
                    <fullName>Hyper-V</fullName>
                </value>
                <value>
                    <fullName>KVM+Openstack</fullName>
                </value>
                <value>
                    <fullName>AHV (Nutanix)</fullName>
                </value>
                <value>
                    <fullName>RHEV (Red Hat)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DealRegq12__c</fullName>
        <description>Question 12 - for Deal reg</description>
        <label>How did the Reseller find this deal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Turbonomic Event</fullName>
                </value>
                <value>
                    <fullName>Partner Event/Webinar</fullName>
                </value>
                <value>
                    <fullName>Other Partner Marketing Activity</fullName>
                </value>
                <value>
                    <fullName>Existing Customer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Extended__c</fullName>
        <description>WI Partner - Extended date for the deal reg</description>
        <label>Deal Extended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Reg_Expired_date__c</fullName>
        <description>WI Partner reg expired date</description>
        <label>Deal Reg Expired date field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Reg_Expired_date_formula__c</fullName>
        <formula>Deal_reg_approval_date__c + 119</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Reg Expired date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Reg_Rejection_date__c</fullName>
        <description>The date of rejection of the lead by the Sales team</description>
        <label>Deal Reg Rejection date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <description>WI Partner - Joint/Accelerated or Incremental</description>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incremental</fullName>
                </value>
                <value>
                    <fullName>Joint/Accelerated</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_reg_approval_date__c</fullName>
        <description>WI partner approval date</description>
        <label>Deal reg approval date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_reg_start_date__c</fullName>
        <label>Deal reg start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Focus_Area__c</fullName>
        <label>Department Focus Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dial_Count_Since_Last_Status_Change__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dial Count Since Last Status Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dial_Count__c</fullName>
        <label>Dial Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dialed_since_last_web_form_fill__c</fullName>
        <formula>Last_Dial_Date__c&gt;=DateValue(Latest_Web_Form_Fill_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dialed since last web form fill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dials_until_First_Conversation__c</fullName>
        <label># Dials until First Conversation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diamond_Add_Date__c</fullName>
        <label>Diamond Add Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diamond__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Key person to talk to.</description>
        <label>Diamond</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Directly_Involved_with_Virtualization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for Corey 3PT</description>
        <label>Directly Involved with Virtualization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscoverOrg_Company_ID_VMT__c</fullName>
        <label>DiscoverOrg Company ID (VMT)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiscoverOrg_Employee_ID_VMT__c</fullName>
        <label>DiscoverOrg Employee ID (VMT)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Do Not Call Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Do Not Call Leads</relationshipLabel>
        <relationshipName>Do_Not_Call_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Domain_for_Acct_Link__c</fullName>
        <formula>SUBSTITUTE(Email,LEFT(Email,FIND(&quot;@&quot;,Email)),&quot;&quot;)</formula>
        <label>Domain for Acct Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EULA_Acceptance_Date__c</fullName>
        <label>EULA Acceptance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EULA_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EULA Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Earliest_Free_Download_Act_Date_Week__c</fullName>
        <formula>DATEVALUE(Earliest_Free_Download_Activation_Date__c)-MOD(DATEVALUE(Earliest_Free_Download_Activation_Date__c)-DATE(1900,1,7),7)</formula>
        <label>Earliest Free Download/Act Date Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earliest_Free_Download_Activation_Date__c</fullName>
        <formula>IF(AND(ISBLANK(First_Free_Version_Download_Date__c ),ISBLANK(First_Free_Version_Activation_Date__c)),NULL, 
IF(AND(NOT(ISBLANK(First_Free_Version_Download_Date__c )),ISBLANK(First_Free_Version_Activation_Date__c)),First_Free_Version_Download_Date__c, 
IF(AND(ISBLANK(First_Free_Version_Download_Date__c ),NOT(ISBLANK(First_Free_Version_Activation_Date__c))),First_Free_Version_Activation_Date__c, 
IF(First_Free_Version_Download_Date__c&lt;First_Free_Version_Activation_Date__c,First_Free_Version_Download_Date__c,First_Free_Version_Activation_Date__c))))</formula>
        <label>Earliest Free Download/Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Earliest_Full_Download_Act_Date_Week__c</fullName>
        <formula>DATEVALUE(Earliest_Full_Download_Activation_Date__c)-MOD(DATEVALUE(Earliest_Full_Download_Activation_Date__c)-DATE(1900,1,7),7)</formula>
        <label>Earliest Full Download/Act Date Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earliest_Full_Download_Activation_Date__c</fullName>
        <formula>IF(AND(ISBLANK(First_Full_Version_Download_Date__c ),ISBLANK(First_Full_Version_Activation_Date__c)),NULL,
IF(AND(NOT(ISBLANK(First_Full_Version_Download_Date__c )),ISBLANK(First_Full_Version_Activation_Date__c)),First_Full_Version_Download_Date__c,
IF(AND(ISBLANK(First_Full_Version_Download_Date__c ),NOT(ISBLANK(First_Full_Version_Activation_Date__c))),First_Full_Version_Activation_Date__c,
IF(First_Full_Version_Download_Date__c&lt;First_Full_Version_Activation_Date__c,First_Full_Version_Download_Date__c,First_Full_Version_Activation_Date__c))))</formula>
        <label>Earliest Full Download/Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Earliest_Product_Download_Act_Date__c</fullName>
        <formula>IF(AND(ISBLANK(Earliest_Free_Download_Activation_Date__c),
ISBLANK(Earliest_Full_Download_Activation_Date__c)),NULL,
DATEVALUE(NOW()-
MAX(
NOW()-IF(ISBLANK(Earliest_Free_Download_Activation_Date__c),NOW(),Earliest_Free_Download_Activation_Date__c),
NOW()-IF(ISBLANK(Earliest_Full_Download_Activation_Date__c),NOW(),Earliest_Full_Download_Activation_Date__c))))</formula>
        <label>Earliest Product Download/Act Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Bounce__c</fullName>
        <label>Email Bounce</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Domain__c</fullName>
        <description>Formula to split out the email domain from a contact&apos;s email address for Gainsight Matching</description>
        <formula>SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Frequency__c</fullName>
        <description>Sets the frequency of company emails this lead will receive. A workflow rule makes changes to this field.</description>
        <inlineHelpText>Sets the frequency of company emails this lead will receive.</inlineHelpText>
        <label>Email Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Once Monthly</fullName>
                </value>
                <value>
                    <fullName>Once Quarterly</fullName>
                </value>
                <value>
                    <fullName>Product Announcements Only</fullName>
                </value>
                <value>
                    <fullName>Bounced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Has_Been_Entered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Work-around used in workflow rule to restrict leads without emails from entering Marketo</description>
        <label>Email Has Been Entered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employees_Account__c</fullName>
        <formula>Account__r.NumberOfEmployees</formula>
        <label>Employees (Account)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engaged_GC_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engaged GC User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_PowerDialer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A self managed checkbox to exclude specific leads from the PowerDialer lists.</description>
        <label>Exclude from PowerDialer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Connect_Date__c</fullName>
        <label>First Connect Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Conversation_Date__c</fullName>
        <label>First Conversation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Dial_Date_Time__c</fullName>
        <label>First Dial Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Dial_Date__c</fullName>
        <label>First Dial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Free_Version_Activation_Date__c</fullName>
        <label>First Free Version Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Free_Version_Download_Date__c</fullName>
        <label>First Free Version Download Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Full_Version_Activation_Date__c</fullName>
        <label>First Full Version Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Full_Version_Download_Date__c</fullName>
        <label>First Full Version Download Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Sendbloom_Campaign_ID__c</fullName>
        <label>First Sendbloom Campaign ID</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Sendbloom_Campaign_Type__c</fullName>
        <label>First Sendbloom Campaign Type</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Sendbloom_Campaign__c</fullName>
        <label>First Sendbloom Campaign</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_WP_Download_Asset_Name__c</fullName>
        <description>Name of the whitepaper this lead downloaded initially. Field was created in Feb 2014, so will be blank for downloads that occurred before then.</description>
        <inlineHelpText>Name of the whitepaper this lead downloaded initially</inlineHelpText>
        <label>First WP Download Asset Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Web_Form_Fill_Date_No_Time__c</fullName>
        <formula>DATEVALUE(First_Web_Form_Fill_Date__c)</formula>
        <label>First Web Form Fill Date (No Time)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Web_Form_Fill_Date__c</fullName>
        <label>First Web Form Fill Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Web_Form_Fill__c</fullName>
        <label>First Web Form Fill</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Download</fullName>
                </value>
                <value>
                    <fullName>Full Activation</fullName>
                </value>
                <value>
                    <fullName>Free Download</fullName>
                </value>
                <value>
                    <fullName>Free Activation</fullName>
                </value>
                <value>
                    <fullName>WP</fullName>
                </value>
                <value>
                    <fullName>WP - 3rd Party</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to move the lead to the top of the lead view.  The lead will still disappear from the view if it has been called recently, but will reappear after a certain number of days.</inlineHelpText>
        <label>Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Focus_Account__c</fullName>
        <formula>Account__r.Focus_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Focus Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greatest_Pain__c</fullName>
        <description>for Corey 3PT</description>
        <label>Greatest Pain</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assuring Application Performance</fullName>
                </value>
                <value>
                    <fullName>Reducing Licensing Costs</fullName>
                </value>
                <value>
                    <fullName>Capacity Planning</fullName>
                </value>
                <value>
                    <fullName>VDI Deployments</fullName>
                </value>
                <value>
                    <fullName>Hybrid Cloud Management</fullName>
                </value>
                <value>
                    <fullName>Deploying OpenStack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Green_Circle_Username__c</fullName>
        <label>Green Circle Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfContent_lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For the EU GDPR Requirements</description>
        <label>Content Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfEvents_lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for the EU GDPR Requirements</description>
        <label>Event Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfNews_lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For EU GDPR requirements</description>
        <label>News Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfProductUpdates_lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For EU GDPR Requirements</description>
        <label>Product Update Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Hyper_V__c</fullName>
        <formula>INCLUDES( Account__r.Hypervisor_Vendor__c, &quot;Hyper-V (Microsoft)&quot;)</formula>
        <label>Has Hyper-V</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_NetApp__c</fullName>
        <formula>INCLUDES(Account__r.Storage_Vendor__c,&quot;NetApp&quot;)</formula>
        <label>Has NetApp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_UCS__c</fullName>
        <formula>INCLUDES(Account__r.Hardware_Vendor__c,&quot;Cisco&quot;)</formula>
        <label>Has UCS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_phone__c</fullName>
        <description>True False for presence of value in lead phone field</description>
        <formula>NOT(ISBLANK( Phone ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has phone #</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_from_VMT_lead_view__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide from VMT lead view</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Value_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked means lead will not receive generic marketing emails. Lead will still receive ~quarterly company announcements such as product releases. To opt out of all emails, use &quot;Email Opt Out&quot;</description>
        <label>High Value Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inactive Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inactive Leads</relationshipLabel>
        <relationshipName>Inactive_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inbound_Lead__c</fullName>
        <formula>IF(
OR(
ISPICKVAL(LeadSource, &apos;Inbound - Product Download&apos;),
ISPICKVAL(LeadSource, &apos;Inbound - Other&apos;),
ISPICKVAL(LeadSource, &apos;Inbound - Webinar&apos;),
ISPICKVAL(LeadSource, &apos;Inbound - Website&apos;),
ISPICKVAL(LeadSource, &apos;Tradeshow&apos;),
ISPICKVAL(LeadSource, &apos;Third Party&apos;),
ISPICKVAL(LeadSource,&apos;Content Syndication&apos;),
ISPICKVAL(LeadSource, &apos;Inbound - WP/E-Book&apos;),
ISPICKVAL(LeadSource, &apos;Inbound - Sweepstakes Entry&apos;),
ISPICKVAL(LeadSource, &apos;Inbound - Contact Us&apos;),
ISPICKVAL(LeadSource, &apos;Inbound - Webcast&apos;),
ISPICKVAL(LeadSource, &apos;Inbound - Event Registration&apos;)),TRUE,FALSE)</formula>
        <label>Inbound Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inbound_Qualified_By__c</fullName>
        <label>Inbound Qualified By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Qualified_Date_Stamp__c</fullName>
        <label>Inbound Qualified Date Stamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inbound_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inbound Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inbound_SLA_Core_Market__c</fullName>
        <description>For use in filtering Core Market leads for Inbound SLAs (CampaignMemberCreateSLA.trigger)</description>
        <formula>IF(ISBLANK(Account__c),
CASE(UPPER(Country_for_Assignment_Rules__c), 
&quot;UNITED KINGDOM&quot;,&quot;EMEA&quot;, 
&quot;SPAIN&quot;, &quot;EMEA&quot;, 
&quot;PORTUGAL&quot;, &quot;EMEA&quot;, 
&quot;FRANCE&quot;, &quot;EMEA&quot;, 
&quot;GREAT BRITAIN&quot;,&quot;EMEA&quot;, 
&quot;GERMANY&quot;,&quot;EMEA&quot;, 
&quot;BELGIUM&quot;,&quot;EMEA&quot;,  
&quot;NETHERLANDS&quot;,&quot;EMEA&quot;, 
&quot;SWITZERLAND&quot;,&quot;EMEA&quot;, 
&quot;AUSTRIA&quot;,&quot;EMEA&quot;, 
&quot;IRELAND&quot;,&quot;EMEA&quot;, 
&quot;ITALY&quot;,&quot;EMEA&quot;, 
&quot;DENMARK&quot;,&quot;EMEA&quot;, 
&quot;FINLAND&quot;,&quot;EMEA&quot;, 
&quot;SWEDEN&quot;,&quot;EMEA&quot;, 
&quot;NORWAY&quot;,&quot;EMEA&quot;, 
&quot;SOUTH AFRICA&quot;,&quot;EMEA&quot;, 
&quot;SCOTLAND&quot;,&quot;EMEA&quot;, 
&quot;UNITED STATES&quot;,&quot;NORAM&quot;, 
&quot;CANADA&quot;,&quot;NORAM&quot;, 
&quot;N/A&quot;),
IF(CONTAINS(&quot;EMEA&quot;, Account__r.Territory_Owner_Team__c),&quot;EMEA&quot;,&quot;NORAM&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inbound SLA Core Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_Marketo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_lead_view__c</fullName>
        <formula>IF(AND(OR(NOT(ISBLANK(Latest_Web_Form_Fill_Date__c)),LEFT(TEXT(LeadSource),4)=&quot;TSE:&quot;,LEFT(TEXT(LeadSource),4)=&quot;3PT:&quot;),OR(Dial_Count__c=0,Last_Web_Form_Fill_Date_Adj_For_Blanks__c&gt;Last_Dial_Date_adj_for_blanks__c),OR(TEXT(Status)=&quot;Suspect&quot;,TEXT(Status)=&quot;Prospect&quot;)),&quot;Include&quot;,

IF(OR(Open_Task__c=TRUE, 
Hide_from_VMT_lead_view__c=TRUE, 
NOT(ISBLANK(Callback_Date__c)), 
AND(TEXT(Status)&lt;&gt;&quot;Suspect&quot;,TEXT(Status)&lt;&gt;&quot;New&quot;,TEXT(Status)&lt;&gt;&quot;Working&quot;)),&quot;Exclude&quot;, 


IF(AND(NOT(ISBLANK(Latest_Web_Form_Fill_Date__c)),TODAY()-Last_Dial_Date_adj_for_blanks__c&gt;=1),&quot;Include&quot;, 

IF(AND(TEXT(Status)=&quot;Prospect&quot;,OR(AND(TEXT(Account__r.Rating)&lt;&gt;&quot;Unqualified&quot;,TEXT(Account__r.Rating)&lt;&gt;&quot;Revisit&quot;),Dial_Count__c=0),TODAY()-Last_Dial_Date_adj_for_blanks__c&gt;=3),&quot;Include&quot;, 

IF(AND(Flag__c=TRUE,TODAY()-Last_Dial_Date_adj_for_blanks__c&gt;=4),&quot;Include&quot;, 

IF(AND(TEXT(Status)=&quot;Suspect&quot;,
OR(TEXT(Account__r.Rating)=&quot;Untouched&quot;,TEXT(Account__r.Rating)=&quot;Cold&quot;), 
Bad_lead_source_for_merge__c&lt;&gt;&quot;Bad&quot;, 
TODAY()-Last_Dial_Date_adj_for_blanks__c&gt;=8),&quot;Include&quot;,&quot;Exclude&quot;))))))</formula>
        <label>Include in lead view?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Account__c</fullName>
        <formula>TEXT(Account__r.Industry)</formula>
        <label>Industry (Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Account_clean__c</fullName>
        <formula>Account__r.Industry_clean__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a formula - you can update it by changing the industry on the ACCOUNT</inlineHelpText>
        <label>Industry (Account - clean)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Bucket__c</fullName>
        <formula>Account__r.Industry_Bucket__c</formula>
        <label>Industry Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intended_Sales_Engineer__c</fullName>
        <formula>Account__r.Intended_Sales_Engineer__c</formula>
        <label>Intended Sales Engineer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Organization__c</fullName>
        <description>Denotes the Internal Organization a contact belongs to within a larger account</description>
        <inlineHelpText>Denote the Internal Organization a contact belongs to within a larger account</inlineHelpText>
        <label>Internal Organization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Involved_in_Tech_Purchasing_Decisions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for Corey 3PT</description>
        <label>Involved in Tech Purchasing Decisions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__EstimatedRevenue__c</fullName>
        <formula>LBI__Recommendation__r.LBI__MonetaryValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeRating__c</fullName>
        <description>Value of Rating field from associated Recommendation record.</description>
        <formula>LBI__Recommendation__r.LBI__Rank__c</formula>
        <inlineHelpText>Value of Rating field from associated Recommendation record.</inlineHelpText>
        <label>Lattice Recommendation Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeScore__c</fullName>
        <description>Value of Score field from associated Recommendation record.</description>
        <formula>LBI__Recommendation__r.LBI__Likelihood__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value of Score field from associated Recommendation record.</inlineHelpText>
        <label>Lattice Recommendation Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__Recommendation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommendation</label>
        <referenceTo>LBI__Recommendation__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Connect_Date__c</fullName>
        <label>Last Connect Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Conversation_Date__c</fullName>
        <label>Last Conversation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_Added_to_Email_Nurture_Program__c</fullName>
        <label>Last Date Added to Email Nurture Program</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Dial_Date_Account__c</fullName>
        <formula>Account__r.Last_Dial_Date__c</formula>
        <label>Last Dial Date (Account)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Dial_Date__c</fullName>
        <label>Last Dial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Dial_Date_adj_for_blanks__c</fullName>
        <formula>IF(ISBLANK(Last_Dial_Date__c),DATE(1900,1,1),Last_Dial_Date__c)</formula>
        <label>Last Dial Date (adj for blanks)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Email_Date__c</fullName>
        <label>Last Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Engagement_Date__c</fullName>
        <label>Last Engagement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Outcome_Date__c</fullName>
        <label>Last Outcome Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Search_Date__c</fullName>
        <label>Last Search Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Web_Form_Fill_Date_Adj_For_Blanks__c</fullName>
        <formula>IF(ISBLANK(Latest_Web_Form_Fill_Date__c),DATE(1900,1,1),DATEVALUE(Latest_Web_Form_Fill_Date__c))</formula>
        <label>Last Web Form Fill Date Adj For Blanks</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Concierge_Download_Date_Time__c</fullName>
        <label>Latest Concierge Download Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Sendbloom_Campaign_ID__c</fullName>
        <label>Latest Sendbloom Campaign ID</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Sendbloom_Campaign_Type__c</fullName>
        <label>Latest Sendbloom Campaign Type</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Sendbloom_Campaign__c</fullName>
        <label>Latest Sendbloom Campaign</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Sendbloom_Touch__c</fullName>
        <label>Latest Sendbloom Touch</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_WP_Download_Asset_Name__c</fullName>
        <label>Latest WP Download Asset Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Web_Form_Fill_Date__c</fullName>
        <label>Latest Web Form Fill Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>